// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can add platform to video game 1`] = `
Object {
  "updateVideoGame": Object {
    "__typename": "VideoGame",
    "platforms": Array [
      Object {
        "__typename": "VideoGamePlatform",
        "id": "Playstation4",
        "name": "Playstation 4",
      },
    ],
  },
}
`;

exports[`can fetch second page of video games 1`] = `
Object {
  "videoGames": Object {
    "__typename": "VideoGamePage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "VideoGame",
        "title": "Ori and the Blind Forest: Definitive Edition",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoxLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJWaWRlb0dhbWU6ZjE1MGRmMGItNmM5Yi00ZTRiLWIyYjgtOTNjNjY3YzhkNGQ3IiwidHlwZSI6IlZpZGVvR2FtZSIsInVwZGF0ZWRBdDp0eXBlOmlkIjoiMTYyNjI2NzI1NTM3NDpWaWRlb0dhbWU6ZjE1MGRmMGItNmM5Yi00ZTRiLWIyYjgtOTNjNjY3YzhkNGQ3In19",
  },
}
`;

exports[`can fetch second page of video games 2`] = `
Object {
  "videoGames": Object {
    "__typename": "VideoGamePage",
    "hasNextPage": true,
    "items": Array [
      Object {
        "__typename": "VideoGame",
        "title": "tmaaw",
      },
    ],
    "nextPageCursor": "eyJjb3VudFNvRmFyIjoyLCJsYXN0S2V5Ijp7InR5cGU6aWQiOiJWaWRlb0dhbWU6NzdhODg5MDktZDAyMy00MmNhLWI0NzQtODlhZDU4OTM5OThhIiwidHlwZSI6IlZpZGVvR2FtZSIsInVwZGF0ZWRBdDp0eXBlOmlkIjoiMTYyNjI2NzI1OTY2NTpWaWRlb0dhbWU6NzdhODg5MDktZDAyMy00MmNhLWI0NzQtODlhZDU4OTM5OThhIn19",
  },
}
`;

exports[`can fetch video games by shelf 1`] = `
Object {
  "videoGameShelf": Object {
    "__typename": "VideoGameShelf",
    "items": Object {
      "__typename": "VideoGamePage",
      "items": Array [
        Object {
          "__typename": "VideoGame",
          "title": "Ori and the Will of the Wisps: Collector's Edition",
        },
      ],
    },
    "name": "Completed",
  },
}
`;

exports[`can import external video game 1`] = `
Object {
  "firstImport": Object {
    "__typename": "VideoGame",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "Completed",
    },
    "title": "Ori and the Will of the Wisps: Collector's Edition",
  },
  "secondImport": Object {
    "__typename": "VideoGame",
    "id": Any<String>,
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "Playing",
    },
    "title": "Ori and the Blind Forest: Definitive Edition",
  },
}
`;

exports[`can move video game between shelves 1`] = `
Object {
  "updateVideoGame": Object {
    "__typename": "VideoGame",
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "Played",
      "name": "Played",
    },
  },
}
`;

exports[`can query single video game 1`] = `
Object {
  "videoGame": Object {
    "__typename": "VideoGame",
    "id": Any<String>,
    "platforms": Array [],
    "rating": null,
    "shelf": Object {
      "__typename": "VideoGameShelf",
      "id": "Completed",
      "name": "Completed",
    },
    "title": "Ori and the Will of the Wisps: Collector's Edition",
  },
}
`;

exports[`can search external video games 1`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 2`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 3`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 4`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 5`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 6`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 7`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 8`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 9`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;

exports[`can search external video games 10`] = `
Object {
  "__typename": "ExternalVideoGame",
  "id": StringMatching /\\^igdb:/,
  "title": Any<String>,
}
`;
